.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xnxk-web
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-default-xnxk-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-default-xnxk-web
      affinity: {}
      containers:
      - env:
        - name: TZ
          value: Asia/Shanghai
        image: xnxktech.tencentcloudcr.com/xnxktech/xnxk.com:main
        imagePullPolicy: Always
        name: xnxk-web
        ports:
        - containerPort: 80
          name: xnxk-web
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: tcr-xnxk
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
